--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="row">
         <div class="col-lg-8 col-sm-8 col-7">
           <ul class="info">
-            <li><a href="#"><i class="fa fa-envelope"></i>digimedia@company.com</a></li>
+            <li><a href="#"><i class="fa fa-envelope"></i></a></li>
             <li><a href="#"><i class="fa fa-phone"></i>010-020-0340</a></li>
           </ul>
         </div>
@@ -138,63 +138,15 @@
             <div class="col-lg-6 align-self-center  wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.5s">
               <div class="about-right-content">
                 <div class="section-heading">
-                  <h6>About Us</h6>
-                  <h4>Who is DigiMedia <em>Agency</em></h4>
+                  <h4>About Me </h4>
                   <div class="line-dec"></div>
                 </div>
-                <p>We hope this DigiMedia template is useful for your work. You can use this template for any purpose. You may <a rel="nofollow" href="http://paypal.me/templatemo" target="_blank">contribute a little amount</a> via PayPal to <a href="https://templatemo.com/contact" target="_blank">support TemplateMo</a> in creating new templates regularly.</p>
-                <div class="row">
-                  <div class="col-lg-4 col-sm-4">
-                    <div class="skill-item first-skill-item wow fadeIn" data-wow-duration="1s" data-wow-delay="0s">
-                      <div class="progress" data-percentage="90">
-                        <span class="progress-left">
-                          <span class="progress-bar"></span>
-                        </span>
-                        <span class="progress-right">
-                          <span class="progress-bar"></span>
-                        </span>
-                        <div class="progress-value">
-                          <div>
-                            90%<br>
-                            <span>Coding</span>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-4 col-sm-4">
-                    <div class="skill-item second-skill-item wow fadeIn" data-wow-duration="1s" data-wow-delay="0s">
-                      <div class="progress" data-percentage="80">
-                        <span class="progress-left">
-                          <span class="progress-bar"></span>
-                        </span>
-                        <span class="progress-right">
-                          <span class="progress-bar"></span>
-                        </span>
-                        <div class="progress-value">
-                          <div>
-                            80%<br>
-                            <span>Photoshop</span>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-4 col-sm-4">
-                    <div class="skill-item third-skill-item wow fadeIn" data-wow-duration="1s" data-wow-delay="0s">
-                      <div class="progress" data-percentage="80">
-                        <span class="progress-left">
-                          <span class="progress-bar"></span>
-                        </span>
-                        <span class="progress-right">
-                          <span class="progress-bar"></span>
-                        </span>
-                        <div class="progress-value">
-                          <div>
-                            80%<br>
-                            <span>Animation</span>
-                          </div>
-                        </div>
+                <p> I am a Info Technology Student at St Johns University. I enjoy problem-solving and coding.</p>
+                <ul style=“list-style-type:square">
+                <li><b>Languages:</b> Java, JS, HTML, CSS, C, C++, PHP, and Bash</li>
+                <li><b>Databases:</b> SQL and MongoDB</li>
+                </ul>
+                <p>Looking for an opportunity to work in a challenging position combining my skills in Programming and Sys Admin work</p>
                       </div>
                     </div>
                   </div>
@@ -202,12 +154,8 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
-  <div id="services" class="services section">
+ <!-- ***** <div id="services" class="services section"> ***** --!>
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -216,7 +164,7 @@
             <h4>What Our Agency <em>Provides</em></h4>
             <div class="line-dec"></div>
           </div>
-        </div>
+        </div> *//
         <div class="col-lg-12">
           <div class="naccs">
             <div class="grid">
